<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.MainActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/cancel_icon"
        android:orderInCategory="100"
        android:title="@android:string/cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/next_icon"
        android:orderInCategory="101"
        android:title="Next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="102"
        android:title="Send as email"
        app:showAsAction="never"/>
</menu>
